--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^3.0.0"
   }
 }
