--- a/package.json
+++ b/package.json
@@ -1,36 +1,27 @@
 {
-  "name": "portofolify",
-  "version": "0.1.0",
+  "name": "wealth-tracker",
   "private": true,
+  "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.2.1",
-    "@mui/material": "^6.2.1",
-    "@mui/material-nextjs": "^6.2.1",
-    "@mui/x-charts": "^7.23.2",
-    "next": "15.1.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "uuid": "^11.0.3"
+    "@netlify/functions": "^5.1.1",
+    "@netlify/vite-plugin": "^2.7.16",
+    "lucide-react": "^0.263.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@netlify/plugin-nextjs": "^5.9.1",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "postcss": "^8",
-    "prettier": "3.4.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "papaparse": "^5.5.3",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.8"
   }
 }
